* Revise the localization and date format associate to locale. It helps external developers can translate MyCollab to other languages easily
* Refactor the test module, using assertJ and JUnit TestRule instead of the custom JUnitClassRunner to make unit tests more flexible in enhancements
* Minor bug fixes and new features for mobile

**Bug Fixes**

* Project Notification can not be sent in some special cases
* Search time logging throws exception in several special input cases
* Fix NPE exception when there is several options has null value
* Minor bug fixes for file module

Version 4.5.1
-----------------------------
**Improvements**

* Upgrade Spring framework to 4.1.0.RELEASE
* Upgrade Vaadin libraries
* Adding scheduler unit tests
* Project page could be exported into pdf format
* Project time logging is displayed in multiple layouts
* User can add comment to project component and project version
* Validate project shortname is unique in account
* Make links of bug and task are readable
* Add tooltip to pretty time display

**Bug Fixes**

* Save task in task read view throws exception
* Inconsistent time logging permission
* Throws exception if user saves an empty search criteria
* Return redundant task element for empty task list
* Switch view causes the right widget in task, bug display in the wrong position

Version 4.5.0
-----------------------------
**Improvements**

* Upgrade libraries versions
* Revise project time tracking view
* Support version management in project page
* Support date format associate to user's locale
* Break mobile app into 2 sub apps: CRM and Project Management
* Reload site after user change information to make this change is applied immediately
* Improve error handling in event bus implementation
* The project time tracking views support multiple views
* Create the default task group when user create the new project
* Support more search criteria for bug
* Support display inline more image file types different than jpg/png
