@@ -42,6 +42,5 @@
             <artifactId>infinispan-core</artifactId>
             <version>6.0.2.Final</version>
         </dependency>
-
     </dependencies>
 </project>
