@@ -14,26 +14,16 @@
  * You should have received a copy of the GNU General Public License
  * along with mycollab-caching.  If not, see <http://www.gnu.org/licenses/>.
  */
-package com.esofthead.mycollab.jgroups.protocols;
+package com.esofthead.mycollab.jgroups.service;
 
-import org.jgroups.conf.ClassConfigurator;
-import org.jgroups.protocols.JDBC_PING;
+import java.util.concurrent.locks.Lock;
 
-public class JDBC_PING_EXT extends JDBC_PING {
-
-	static {
-		ClassConfigurator.add((short) 2048, JDBC_PING_EXT.class);
-	}
-
-	@Override
-	public void init() throws Exception {
-		this.datasource_jndi_name = "java:comp/env/jdbc/mycollabdatasource";
-		this.initialize_sql = " CREATE TABLE IF NOT EXISTS JGROUPSPING (own_addr varchar(200) NOT NULL, "
-				+ "cluster_name varchar(200) NOT NULL,"
-				+ "ping_data varbinary(5000) DEFAULT NULL, "
-				+ "PRIMARY KEY (own_addr, cluster_name) ) "
-				+ "ENGINE=InnoDB DEFAULT CHARSET=latin1;";
-		this.id = 2048;
-		super.init();
-	}
+/**
+ * 
+ * @author MyCollab Ltd.
+ * @since 4.5.2
+ *
+ */
+public interface DistributionLockService {
+	Lock getLock(String lockName);
 }
